crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__specifier_periodic__range.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "/2,1-3",
                    '-',
                ),
                Nom(
                    "1/2,1-3",
                    Alt,
                ),
            ],
        },
    ),
)
